[gd_scene load_steps=5 format=3 uid="uid://d3hpyqlnepijn"]

[ext_resource type="Script" path="res://Scenes/ui/Level complete.gd" id="1_gw58n"]
[ext_resource type="Texture2D" uid="uid://c2w6yyyepbw8l" path="res://Assets/Menu/Buttons/Restart.png" id="2_lv00h"]
[ext_resource type="Texture2D" uid="uid://cp0wo23iriklk" path="res://Assets/Menu/Buttons/Next.png" id="2_sx3sm"]
[ext_resource type="Texture2D" uid="uid://cpper0dj8bw0i" path="res://Assets/Menu/Buttons/Back.png" id="4_e3sue"]

[node name="Level Complete" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gw58n")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -444.0
offset_top = 64.0
offset_right = 444.0
offset_bottom = -491.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 120
text = "Level Complete"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.5
offset_top = -60.0
offset_right = 249.5
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="Next" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_hover_color = Color(0.619608, 0.619608, 0.619608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 50
text = "Next"
icon = ExtResource("2_sx3sm")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="Restart" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_hover_color = Color(0.619608, 0.619608, 0.619608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 50
text = "Restart"
icon = ExtResource("2_lv00h")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="Main Menu" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_hover_color = Color(0.619608, 0.619608, 0.619608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 50
text = "Main Menu"
icon = ExtResource("4_e3sue")
alignment = 0
icon_alignment = 2
expand_icon = true

[connection signal="pressed" from="VBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
